--- a/config/widget.yaml
+++ b/config/widget.yaml
@@ -15,6 +15,7 @@ data:
       description    : The widget App
       plan           : widget-unlimited
       account        : john
+      service        : widget-2-system
       systemName     : widget-app
   applicationPlan_yaml: |
     plans:
