--- a/config/widget.yaml
+++ b/config/widget.yaml
@@ -26,7 +26,7 @@ data:
         description    : The widget App
         plan           : widget-unlimited
         account        : john
-        service        : widget-backend
+        service        : widget-service
         systemName     : widget-app
   applicationPlan_yaml: |
     plans:
